--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,16 @@
 
     <title>Jollikod - Bida ka!</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <link rel="stylesheet" href="../assets/css/global.css">
+
+    <script defer src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"> </script>
+    <script src="../assets/js/utils/content-loader.js"></script>
   </head>
-  <body style="overflow: hidden">
+  <body>
     <iframe
-      style="width: 100%; height: 100svh; border: none"
-      src="../routes/home/Home.html"
+      id="index-frame"
+      src="../pages/home/home.html"
       frameborder="0"
     ></iframe>
   </body>
