--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Jollikod - Bida ka!</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="../assets/css/pages/index.css" />
 
-    <script defer src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"> </script>
-    <script src="../assets/js/utils/content-loader.js"></script>
+    <script src="../assets/js/utils/content-loader.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"
+      defer
+    ></script>
   </head>
   <body>
-    <iframe
-      id="index-frame"
-      src="../pages/home/home.html"
-      frameborder="0"
-    ></iframe>
+    <iframe id="app" frameborder="0"></iframe>
   </body>
 </html>
