--- a/frontend/pages/branch/settings.html
+++ b/frontend/pages/branch/settings.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Settings</title>
   </head>
-  <body>
-    Customer
-  </body>
+  <body></body>
 </html>
