--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../assets/css/pages/index.css" />
 
     <script src="../assets/js/utils/content-loader.js" defer></script>
+    <script src="../assets/js/components/audio.js" defer></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"
       defer
