--- a/frontend/pages/branch/menu.html
+++ b/frontend/pages/branch/menu.html
@@ -3,121 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Find your Cravings!</title>
 
     <link rel="stylesheet" href="../../assets/css/pages/branch/menu.css" />
 
     <script src="../../assets/js/components/layer.js" defer></script>
   </head>
   <body class="branch">
-    <nav class="navbar">
-      <img
-        src="../../assets/res/logos/Jollikod.svg"
-        alt="Jollikod"
-        class="logo"
-        onclick="parent.navigate(event, '../pages/home/home.html')"
-      />
-
-      <hr class="nav-hr" />
-
-      <ul class="pages-container" id="nav">
-        <li
-          class="page-container active-page"
-          id="menu"
-          onclick="parent.navigate(event, '../pages/branch/menu.html')"
-        >
-          <i class="bx bxs-dish page-icon"></i>
-          <span class="page-label">Menu</span>
-        </li>
-        <li
-          class="page-container"
-          id="activity"
-          onclick="parent.navigate(event, '../pages/branch/activity.html')"
-        >
-          <i class="bx bxs-basket page-icon"></i>
-          <span class="page-label">Activity</span>
-        </li>
-
-        <ul class="pages-container" id="more">
-          <li
-            class="page-container hide-page"
-            id="more-collapsed"
-            onclick="parent.navigate(event, '../pages/branch/store.html')"
-          >
-            <!-- Change navigate to a modal -->
-            <i class="bx bxs-circles page-icon"></i>
-            <span class="page-label">More</span>
-          </li>
-
-          <ul class="pages-container" id="more-expanded">
-            <li
-              class="page-container"
-              id="store"
-              onclick="parent.navigate(event, '../pages/branch/store.html')"
-            >
-              <i class="bx bxs-store page-icon"></i>
-              <span class="page-label">Store</span>
-            </li>
-            <li
-              class="page-container"
-              id="customer"
-              onclick="parent.navigate(event, '../pages/branch/customer.html')"
-            >
-              <i class="bx bxs-fork-spoon page-icon"></i>
-              <span class="page-label">Customer</span>
-            </li>
-            <li
-              class="page-container"
-              id="staff"
-              onclick="parent.navigate(event, '../pages/branch/staff.html')"
-            >
-              <i class="bx bxs-chef-hat page-icon"></i>
-              <span class="page-label">Staff</span>
-            </li>
-          </ul>
-        </ul>
-
-        <ul class="pages-container" id="account">
-          <li
-            class="page-container hide-page"
-            id="account-collapsed"
-            onclick="parent.navigate(event, '../pages/branch/account.html')"
-          >
-            <i class="bx bxs-user page-icon"></i>
-            <span class="page-label">Account</span>
-          </li>
-
-          <ul class="pages-container" id="account-expanded">
-            <li
-              class="page-container"
-              id="settings"
-              onclick="parent.navigate(event, '../pages/branch/settings.html')"
-            >
-              <i class="bx bxs-cog page-icon"></i>
-              <span class="page-label">Settings</span>
-            </li>
-
-            <hr class="nav-hr" />
-
-            <li
-              class="page-container"
-              id="profile"
-              onclick="parent.navigate(event, '../pages/branch/account.html')"
-            >
-              <i class="bx bxs-user page-icon"></i>
-              <span class="page-label">Profile</span>
-            </li>
-          </ul>
-        </ul>
-      </ul>
-    </nav>
-
     <main class="page">
-      <header class="header">
+      <header class="header header-page">
         <div class="context">
-          <h1 class="logo">
+          <h1>
             <a onclick="parent.navigate(event, '../pages/home/home.html')"
-              >Jollikod.</a
+              >Menu</a
             >
           </h1>
         </div>
@@ -129,125 +27,13 @@
         </div>
       </header>
 
-      <main class="main-container">
-        <main class="main">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quisquam
-          deserunt voluptate ea, atque aliquid labore ad deleniti eligendi
-          dolores eius sunt neque sequi, nihil quos saepe repudiandae? Ab
-          quibusdam quos illo, ex veniam iure architecto optio officiis
-          consequuntur voluptates aperiam. Eligendi, nisi distinctio non quia
-          aspernatur ut consectetur tempora facere tempore, similique quis
-          dolores iure dolore laborum voluptatum alias perferendis commodi ipsum
-          delectus quae optio! Ea qui exercitationem enim, non, nisi a quia
-          laboriosam reprehenderit nulla dolor consequatur itaque, asperiores
-          veniam commodi magni voluptatum numquam quis fugit illum tenetur ab.
-          Magnam saepe, nihil esse nobis iure amet corporis ipsam atque
-          architecto repellendus quos ratione qui nostrum aliquid blanditiis
-          sapiente obcaecati voluptatum modi, quas nisi maxime dolores! Nemo, ab
-          perferendis! Repellendus explicabo minima repudiandae quo quaerat
-          minus, dicta animi aliquid maxime fugit dolore debitis tempore libero
-          laborum recusandae pariatur laudantium ullam nesciunt aperiam non,
-          eveniet expedita odit, saepe quos! Quos, eveniet. Ad, quod et sed
-          saepe aspernatur veritatis libero id fugiat. Debitis iste atque dolore
-          inventore id at facilis nisi minus cumque mollitia provident optio
-          deserunt et alias aliquid officiis quo vitae voluptatibus omnis,
-          itaque dolores eaque iure, totam corporis. Explicabo, similique.
-          Quaerat adipisci explicabo ad quis dolorem ipsum excepturi, culpa
-          vitae nihil sunt ullam? Nihil, eligendi vero et quasi accusamus
-          voluptatibus unde alias voluptas est ullam aliquid animi reiciendis
-          vel aut debitis perferendis cumque tempora nam reprehenderit, fugit
-          explicabo? Ad, neque, consequuntur, error eaque modi sapiente alias
-          vel praesentium veritatis explicabo iste minima consectetur at amet
-          itaque autem tempore odit laudantium hic. Facilis dolorem, debitis
-          officia nulla alias accusamus placeat saepe sapiente, deleniti ad
-          possimus in tenetur quidem eius soluta consequuntur enim itaque
-          aperiam consequatur ea quas dolor amet ut! Ducimus animi, nihil
-          officia, sequi debitis vero cupiditate nulla labore dicta unde fugiat,
-          qui quas commodi? Delectus sit impedit, omnis neque ipsum, voluptas
-          aperiam recusandae dolor exercitationem perspiciatis cumque repellat
-          provident magni quisquam optio totam. A, nulla rem magni velit ad
-          voluptate distinctio. Eaque ducimus fuga quod nisi adipisci esse earum
-          recusandae quasi, dicta maiores soluta facere iusto consequatur cum
-          voluptas placeat repellat nam vitae architecto aut nemo ipsa.
-          Cupiditate deleniti id, sequi itaque iusto magni voluptas quam dolore.
-          Odio facilis nostrum repudiandae similique. Corrupti soluta unde
-          officia voluptas sapiente expedita facilis magnam suscipit alias
-          quisquam excepturi architecto ratione assumenda, earum minus ea,
-          numquam dolorem modi sunt. Eius adipisci sunt labore ipsa similique.
-          Magni modi consequuntur iure corporis eum! Fugit itaque maxime cum
-          molestiae rem. Ratione optio eum sunt inventore, explicabo deleniti
-          necessitatibus, veniam culpa nisi, ullam aliquam expedita velit
-          voluptatem cupiditate sint vero dignissimos totam eveniet. Ratione
-          doloribus omnis amet consequuntur expedita, nam quidem at ducimus quos
-          ex officiis vel sit a dolores non voluptate aliquid incidunt quas,
-          provident, temporibus minima. Ea, officia rem eaque natus impedit
-          error, quia dolorem libero, et alias pariatur perferendis dolores!
-          Adipisci illo et placeat dignissimos expedita tenetur. Nisi nulla eos
-          voluptas provident similique debitis laborum odit architecto! Vel
-          velit rerum fugit, consectetur accusamus quos nemo, assumenda alias
-          fugiat consequuntur esse! Quia et modi at necessitatibus nemo suscipit
-          vitae, animi veniam corporis odio dolorum unde provident iure amet
-          veritatis quasi labore aliquid beatae deserunt exercitationem
-          voluptatibus. Mollitia fugiat consectetur doloremque cumque.
-          Recusandae, atque maiores id ducimus eius ratione animi odit earum
-          libero. Omnis fugit facilis vitae voluptatem consequuntur nihil, eos
-          perferendis id facere unde ipsam saepe est enim officiis pariatur aut
-          tempore animi quo vero! Eum, corporis? Tempore iure maxime aperiam
-          quibusdam dicta ipsa cumque provident incidunt reiciendis minus velit
-          quasi quae aliquid atque odit sunt obcaecati delectus deserunt vel
-          animi, temporibus repellat cum esse architecto. Eaque, voluptatem.
-          Possimus ipsum velit tempora itaque assumenda quas! Expedita,
-          voluptatem earum praesentium itaque perferendis repudiandae,
-          cupiditate odio quaerat quos deserunt accusamus eos magni laborum
-          doloribus hic fuga aliquid quibusdam aspernatur temporibus doloremque.
-          Sed quae iste omnis eos sit, provident accusamus ipsa ad illo non hic
-          reprehenderit voluptas totam, repellat ex perspiciatis debitis.
-          Tempora ea itaque laudantium blanditiis maxime quisquam fugiat velit
-          consequuntur accusantium placeat. Ipsum perspiciatis, dolorem suscipit
-          sapiente nostrum molestiae neque praesentium quas eligendi numquam?
-          Rem, ipsam illum voluptatem aut impedit tempora nihil dolore aperiam
-          deserunt. Corrupti adipisci est nisi voluptatem soluta praesentium,
-          blanditiis quo nulla dolorem debitis minima velit, facilis obcaecati
-          asperiores ipsa, reprehenderit temporibus repellendus mollitia
-          explicabo cupiditate incidunt aspernatur non modi. Eaque eveniet quos,
-          quibusdam et fugiat sed aut! Dolorem aliquid culpa iusto fuga soluta
-          laboriosam odit quis temporibus cumque nulla maiores, quae, quod a
-          provident ut consectetur. Voluptates harum alias non esse consequatur
-          quae impedit nam ducimus illo sed a veritatis voluptate necessitatibus
-          natus ipsam commodi architecto aliquid neque minima repudiandae velit,
-          ex placeat eum incidunt. Delectus iure aperiam, deserunt, quidem omnis
-          nemo alias aliquid blanditiis, ipsam veritatis necessitatibus vero
-          odio beatae nam repudiandae. Obcaecati tempora sit, dolore modi magnam
-          minima fugit explicabo vitae cum, porro aliquid aspernatur fugiat
-          libero culpa, qui quae eveniet amet! Quo quasi ullam itaque eveniet
-          eos soluta veritatis possimus sequi in perferendis omnis enim nisi
-          doloremque non nesciunt, veniam dignissimos, tempora quas aut illum
-          dicta esse cum distinctio. Aliquid corrupti fuga repellendus ut quo?
-          Cum, ex. Excepturi, sequi distinctio suscipit dicta qui animi ipsa
-          beatae saepe deserunt? Nulla dignissimos voluptatem sint odit, fugiat
-          illo quae molestiae pariatur quod. Soluta sunt, voluptatem molestiae
-          ad rem ab praesentium. Corporis itaque exercitationem quibusdam enim
-          voluptatem, consequatur magnam perspiciatis sequi dolore maxime
-          repellat, explicabo fuga! Est voluptatem doloremque aperiam dolorem
-          odit tenetur culpa, quo repudiandae fuga ea, explicabo odio quaerat,
-          harum facere dicta corporis ex. Nisi cumque molestiae suscipit ut
-          blanditiis culpa repellat impedit pariatur alias reiciendis voluptas
-          repudiandae incidunt excepturi tempora repellendus eveniet ullam
-          itaque nemo, dolor aliquid provident atque magni aliquam. Libero minus
-          similique doloremque tempora harum explicabo fugit nisi assumenda
-          delectus quam expedita, illo optio adipisci ipsam ipsa exercitationem,
-          aspernatur dolore, quis dolores ad culpa perferendis mollitia! Nulla
-          quis doloremque delectus veniam ipsa expedita, accusamus et beatae
-          perspiciatis ducimus! Corporis explicabo natus nobis sequi fuga
-          accusantium reiciendis quas illo, perferendis autem fugiat
-          necessitatibus eum cupiditate officiis accusamus neque ut laudantium
-          similique dolorum exercitationem numquam quibusdam praesentium quasi.
-        </main>
+      <main class="main-container main-scrollable">
+        <main class="main">Arf</main>
       </main>
     </main>
 
     <aside class="layer">
-      <header class="header">
+      <header class="header header-page">
         <div class="actions left">
           <button class="btn btn-secondary layer-close" title="Close Panel">
             <i class="bx bxs-dock-right-arrow btn-icon"></i>
@@ -267,8 +53,8 @@
         </div>
       </header>
 
-      <main class="main-container">
-        <main class="main">Basket</main>
+      <main class="main-container main-scrollable">
+        <main class="main">Meow</main>
       </main>
     </aside>
   </body>
