--- a/frontend/pages/home/login.html
+++ b/frontend/pages/home/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Welcome Back</title>
+    <title>Welcome Back!</title>
 
     <link rel="stylesheet" href="../../assets/css/pages/home/login.css" />
 
@@ -111,7 +111,7 @@
                 alt="Jollikod"
                 class="logo"
               />
-              <h6>Managing the restaurant?</h6>
+              <h4>Managing the restaurant?</h4>
               <button class="btn btn-secondary slider-left-btn">
                 Continue as Branch
               </button>
@@ -122,7 +122,7 @@
                 alt="Jollikod"
                 class="logo"
               />
-              <h6>Just grabbing a bite?</h6>
+              <h4>Just grabbing a bite?</h4>
               <button class="btn btn-secondary slider-right-btn">
                 Continue as Customer
               </button>
