--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,6 @@
     ></script>
   </head>
   <body>
-    <iframe id="app" frameborder="0"></iframe>
+    <iframe id="app" frameborder="0" class="frame"></iframe>
   </body>
 </html>
