FIX: frontend initial customer and branch ui

--- a/frontend/pages/customer/settings.html
+++ b/frontend/pages/customer/settings.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Share your insights!</title>
+    <title>Account Settings</title>
 
     <link
       rel="stylesheet"
-      href="../../assets/css/pages/customer/feedback.css"
+      href="../../assets/css/pages/customer/settings.css"
     />
 
     <script src="../../assets/js/components/layer.js" defer></script>
@@ -18,7 +18,7 @@
         <div class="context">
           <h1>
             <a onclick="parent.navigate(event, '../pages/home/home.html')"
-              >Feedback</a
+              >Settings</a
             >
           </h1>
         </div>
