--- a/frontend/pages/branch/activity.html
+++ b/frontend/pages/branch/activity.html
@@ -3,125 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find your Cravings!</title>
+    <title>Order More!</title>
 
-    <link rel="stylesheet" href="../../assets/css/pages/branch/menu.css" />
+    <link rel="stylesheet" href="../../assets/css/pages/branch/activity.css" />
 
     <script src="../../assets/js/components/layer.js" defer></script>
   </head>
   <body class="branch">
-    <nav class="navbar">
-      <img
-        src="../../assets/res/logos/Jollikod.svg"
-        alt="Jollikod"
-        class="logo"
-      />
-
-      <hr class="nav-hr" />
-
-      <ul class="pages-container" id="nav">
-        <li
-          class="page-container active-page"
-          id="menu"
-          onclick="parent.navigate(event, '../pages/branch/menu.html')"
-        >
-          <i class="bx bxs-dish page-icon"></i>
-          <span class="page-label">Menu</span>
-        </li>
-        <li
-          class="page-container"
-          id="activity"
-          onclick="parent.navigate(event, '../pages/branch/activity.html')"
-        >
-          <i class="bx bxs-basket page-icon"></i>
-          <span class="page-label">Activity</span>
-        </li>
-
-        <ul class="pages-container" id="more">
-          <li
-            class="page-container hide-page"
-            id="more-collapsed"
-            onclick="parent.navigate(event, '../pages/branch/store.html')"
-          >
-            <!-- Change navigate to a modal -->
-            <i class="bx bxs-circles page-icon"></i>
-            <span class="page-label">More</span>
-          </li>
-
-          <ul class="pages-container" id="more-expanded">
-            <li
-              class="page-container"
-              id="store"
-              onclick="parent.navigate(event, '../pages/branch/store.html')"
-            >
-              <i class="bx bxs-store page-icon"></i>
-              <span class="page-label">Store</span>
-            </li>
-            <li
-              class="page-container"
-              id="customer"
-              onclick="parent.navigate(event, '../pages/branch/customer.html')"
-            >
-              <i class="bx bxs-fork-spoon page-icon"></i>
-              <span class="page-label">Customer</span>
-            </li>
-            <li
-              class="page-container"
-              id="staff"
-              onclick="parent.navigate(event, '../pages/branch/staff.html')"
-            >
-              <i class="bx bxs-chef-hat page-icon"></i>
-              <span class="page-label">Staff</span>
-            </li>
-          </ul>
-        </ul>
-
-        <ul class="pages-container" id="account">
-          <li
-            class="page-container hide-page"
-            id="account-collapsed"
-            onclick="parent.navigate(event, '../pages/branch/account.html')"
-          >
-            <i class="bx bxs-user page-icon"></i>
-            <span class="page-label">Account</span>
-          </li>
-
-          <ul class="pages-container" id="account-expanded">
-            <li
-              class="page-container"
-              id="settings"
-              onclick="parent.navigate(event, '../pages/branch/settings.html')"
-            >
-              <i class="bx bxs-cog page-icon"></i>
-              <span class="page-label">Settings</span>
-            </li>
-
-            <hr class="nav-hr" />
-
-            <li
-              class="page-container"
-              id="profile"
-              onclick="parent.navigate(event, '../pages/branch/account.html')"
-            >
-              <i class="bx bxs-user page-icon"></i>
-              <span class="page-label">Profile</span>
-            </li>
-          </ul>
-        </ul>
-      </ul>
-    </nav>
-
     <main class="page">
       <header class="header header-page">
         <div class="context">
           <h1>
             <a onclick="parent.navigate(event, '../pages/home/home.html')"
-              >Menu</a
+              >Activity</a
             >
           </h1>
         </div>
         <div class="actions right">
-          <button class="btn btn-primary layer-open">
+          <button
+            class="btn btn-primary layer-open"
+            data-layer-target="add-item"
+          >
             <span class="btn-label">Add Item</span>
             <i class="bx bxs-user-plus btn-icon"></i>
           </button>
@@ -133,7 +35,7 @@
       </main>
     </main>
 
-    <aside class="layer">
+    <aside class="layer" id="add-item">
       <header class="header header-page">
         <div class="actions left">
           <button class="btn btn-secondary layer-close" title="Close Panel">
@@ -155,7 +57,33 @@
       </header>
 
       <main class="main-container main-scrollable">
-        <main class="main">Meow</main>
+        <main class="main">Dito Main Content</main>
+      </main>
+    </aside>
+
+    <aside class="layer" id="edit-item">
+      <header class="header header-page">
+        <div class="actions left">
+          <button class="btn btn-secondary layer-close" title="Close Panel">
+            <i class="bx bxs-dock-right-arrow btn-icon"></i>
+          </button>
+        </div>
+        <div class="context">
+          <h1>Edit Item</h1>
+        </div>
+        <div class="actions right">
+          <button
+            onclick="parent.navigate(event, '../pages/branch/activity.html')"
+            class="btn btn-primary"
+            title="Di ko na alam"
+          >
+            <i class="bx bxs-user-plus btn-icon"></i>
+          </button>
+        </div>
+      </header>
+
+      <main class="main-container main-scrollable">
+        <main class="main">Dito Sidebar</main>
       </main>
     </aside>
   </body>
