FEAT: tab component

--- a/frontend/pages/branch/activity.html
+++ b/frontend/pages/branch/activity.html
@@ -31,7 +31,40 @@
       </header>
 
       <main class="main-container main-scrollable">
-        <main class="main">Arf</main>
+        <main class="main">
+          <div class="tab-container">
+            <!-- radios -->
+            <input type="radio" name="tab-group" id="tab-1" checked />
+            <input type="radio" name="tab-group" id="tab-2" />
+            <input type="radio" name="tab-group" id="tab-3" />
+            <input type="radio" name="tab-group" id="tab-4" />
+            <input type="radio" name="tab-group" id="tab-5" />
+            <input type="radio" name="tab-group" id="tab-6" />
+
+            <!-- tab bar (top) -->
+            <div class="tab-bar">
+              <label for="tab-1" class="tab">Placed</label>
+              <label for="tab-2" class="tab">Queued</label>
+              <label for="tab-3" class="tab">Waiting</label>
+              <label for="tab-4" class="tab">Delivering</label>
+              <label for="tab-5" class="tab">Delivered</label>
+              <label for="tab-6" class="tab">Received</label>
+            </div>
+
+            <!-- tab content -->
+            <div class="tab-content" id="content-1">Home tab content here.</div>
+
+            <div class="tab-content" id="content-2">Profile content here.</div>
+
+            <div class="tab-content" id="content-3">Settings content here.</div>
+
+            <div class="tab-content" id="content-4">4 content here.</div>
+
+            <div class="tab-content" id="content-5">5 content here.</div>
+
+            <div class="tab-content" id="content-6">6 content here.</div>
+          </div>
+        </main>
       </main>
     </main>
 
