--- a/frontend/pages/branch/index.html
+++ b/frontend/pages/branch/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find your Cravings!</title>
 
     <link rel="stylesheet" href="../../assets/css/pages/branch/index.css" />
 
@@ -103,7 +102,7 @@
       id="page-frame"
       frameborder="0"
       class="frame"
-      src="./menu.html"
+      src="./activity.html"
     ></iframe>
   </body>
 </html>
